# flight_simulator

./: .coverage  .env  .env.test.example  Dockerfile  Makefile  README.md  agents.md  babel.config.js  claude.md  docker-compose.test.yml  docker-compose.yml  eslint.config.js  jest.config.js  jest.js  nginx.conf  package-lock.json  package.json  pyproject.toml  pytest  test_runner.py  watch_logs.sh
.github/workflows/: ci.yml
client/: audio.js  index.html  login.js  main.js  nginx.conf  progression.js  settings.js  style.css
client/js/: audio.js  movement.js  network.js  progression.js
docs/: PRD.md  audio_implementation_guide.md  design.md  game_design.md  task_list.md  technical_architecture.md  test_approach.md  testing_strategy.md
kids_flight_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_tests.sh
server/: backup_db.py  init_db.py  main.py  progression.py  requirements.txt
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
tests/: .env.test.example
tests/backend/: test_api.py  test_db_utils.py  test_main.py  test_progression.py  test_progression_extended.py
tests/frontend/: audio.test.js  movement.test.js  network.test.js  progression.test.js  setup.js  test_audio.js  test_progression.js
tests/frontend/mocks/: fileMock.js  styleMock.js
tests/performance/: performance_test.js
tests/usability/: target_audience_test.md
